--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,43 @@ h1 {
 #temperature, #description {
     font-size: 18px;
 }
+
+.rain {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+.rain div {
+    position: absolute;
+    bottom: 100%;
+    width: 1px;
+    height: 90%;
+    background: #0cf;
+    animation: rain 1s linear infinite;
+}
+
+@keyframes rain {
+    to {
+        transform: translateY(100%);
+    }
+}
+
+.clear {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: #ff0;
+    animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
